--- a/MMM-DropboxWallpaper.css
+++ b/MMM-DropboxWallpaper.css
@@ -42,11 +42,11 @@
 }
 
 .DBXWLP .disappear {
-  transition: opacity 3s linear;
+  transition: opacity 2s 0s ease;
   opacity:0
 }
 
 .DBXWLP .appear {
-  transition: opacity 3s linear;
+  transition: opacity 4s 2s ease;
   opacity:1;
 }
