--- a/MMM-DropboxWallpaper.css
+++ b/MMM-DropboxWallpaper.css
@@ -1,67 +1,153 @@
-#DBXWLP {
-  background-repeat:no-repeat;
-  background-position:center;
+.DBXWLP {
+  --width: 100%;
+  --height: 100%;
 
-  opacity:1;
-  /*transition: background-image 1s ease 1s;*/
-  transition: opacity 1s ease 1s;
+  width: var(--width);
+  height: var(--height);
+  overflow: hidden;
+  position: relative;
 }
 
-.region.fullscreen #DBXWLP {
-  position:absolute;
-  top:0;
-  left:0;
+.region.fullscreen .DBXWLP {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-
-
-
-#DBXWLP_INFO {
-  position:absolute;
-  bottom:40px;
-  right:10px;
-  padding:10px;
-  border-radius:5px;
-  background-color:rgba(0,0,0,0.5);
-  color:rgba(255,255,255, 0.5);
-  font-size:16px;
-  line-height:110%;
+.DBXWLP .container {
+  width: var(--width);
+  height: var(--height);
+  padding: 0;
+  margin: 0;
+  position: relative;
 }
 
-#DBXWLP.fo {
-  opacity:0;
-  transition: opacity 1s ease 1s;
-}
-/*
-#DBXWLP.tr_1 {
-
-}
-
-#DBXWLP.tr_2 {
-  transform: rotateY(180deg);
-}
-
-#DBXWLP.tr_3 {
-  transform:rotate(180deg);
+.DBXWLP .container.fillBackground::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: var(--width);
+  height: var(--height);
+  background-image: var(--backgroundImage);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0;
 }
 
-#DBXWLP.tr_4 {
-  transform: rotateX(180deg) ;
+.DBXWLP .container.fillBackground.exit::before {
+  animation: bg-exit 2.5s ease-in-out forwards;
 }
 
-#DBXWLP.tr_5 {
-  transform: rotate(270deg) rotateY(180deg);
+.DBXWLP .container.fillBackground.enter::before {
+  animation: bg-enter 2.5s ease-in-out forwards;
 }
 
-#DBXWLP.tr_6 {
-  transform:rotate(90deg);
+.DBXWLP .info {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgb(0 0 0 / 50%);
+  color: white;
+  font-size: 16px;
+  line-height: 110%;
+  text-align: right;
+  opacity: 0;
+  animation: info 2.5s ease-in-out 5s forwards;
 }
 
-#DBXWLP.tr_7 {
-  transform: rotateX(180deg) rotate(90deg);
+.region.fullscreen .DBXWLP .info {
+  bottom: 30px;
+  right: 30px;
 }
 
-#DBXWLP.tr_8 {
-  transform:rotate(270deg);
+.DBXWLP .picture {
+  width: var(--width);
+  height: var(--height);
+  object-fit: var(--object-fit);
+  background-color: transparent;
+  object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-*/
+
+.DBXWLP .picture.enter {
+  opacity: 1;
+  animation: ani-enter 5s ease-in-out forwards;
+}
+
+.DBXWLP .picture.exit {
+  opacity: 0;
+  animation: ani-exit 5s ease-in-out forwards;
+}
+
+@keyframes info {
+  from {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes bg-enter {
+  from {
+    opacity: 0;
+    filter: grayscale(100%) brightness(30%) blur(50px);
+  }
+
+  to {
+    opacity: 1;
+    filter: grayscale(50%) brightness(25%) blur(20px);
+  }
+}
+
+@keyframes bg-exit {
+  from {
+    opacity: 1;
+    filter: grayscale(50%) brightness(25%) blur(20px);
+  }
+
+  to {
+    filter: grayscale(100%) brightness(30%) blur(50px);
+    opacity: 0;
+  }
+}
+
+@keyframes ani-enter {
+  from {
+    transform: rotate(-10deg) scale(2);
+    filter: grayscale(100%);
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes ani-exit {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    transform: rotate(10deg) scale(2);
+    filter: grayscale(100%);
+    opacity: 0;
+  }
+}
+
+.module {
+  background-color: rgb(0 0 0 / 25%);
+  text-shadow: 1px 1px #000;
+  padding: 5px;
+  border-radius: 5px;
+}
